fix: many fixex, changed url for getting ip, file name changes and add more routers, also fixed logging

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,1 @@
-Options +SymLinksIfOwnerMatch 
-RewriteEngine On 
-RewriteCond %{REQUEST_FILENAME} !-f 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /logger.php [L]
-
-DirectoryIndex /logger.php
-RewriteRule ^output/ /logger.php [R=301,NC,L]
+Header set Access-Control-Allow-Origin "*"
